Committing before implementing glTF support. Once added, will be the main model format to be supported by using .glb file.

--- a/docs/report/refs.bib
+++ b/docs/report/refs.bib
@@ -17,7 +17,7 @@
   title  = {{Illumination for Computer Generated Pictures}},
   author = {{Bui Tuong Phong}},
   year   = {1975},
-  note   = {[Online; accessed 12-December-2022]},
+  note   = {[Online; accessed 12-December-2022]}
 }
 
 @misc{bounding_boxes,
