Updates to report.

--- a/docs/report/refs.bib
+++ b/docs/report/refs.bib
@@ -13,6 +13,14 @@
   note   = {[Online; accessed 2-May-2023]}
 }
 
+@misc{moire_pattern,
+  author       = {{Wikipedia contributors}},
+  title        = {Moire Pattern --- {Wikipedia}{,} The Free Encyclopedia},
+  year         = {2023},
+  howpublished = {\url{https://en.wikipedia.org/wiki/Moir%C3%A9_pattern}},
+  note         = {[Online; accessed 21-April-2023]}
+}
+
 @article{blinn,
   title  = {{Illumination for Computer Generated Pictures}},
   author = {{Bui Tuong Phong}},
